--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
       <div class="navbar">
         <img src="images/img/logo.png" class="logo" />
         <button type="button">Sign Up</button>
+
+      </div>
+      <div class="content">
+          <small>Welcome to our </small>
+          <h1>World's <br>Creative Studio</h1>
+          <button type="button">Take a Tour</button>
+      </div>
+      <div class="sidebar">
+          <img src="images/img/menu.png" class="menu"> 
+          <div class="social-links">
+              <img src="images/img/fb.png">
+              <img src="images/img/ig.png">
+              <img src="images/img/tw.png">
+          </div>
+          <div class="useful-links">
+            <img src="images/img/share.png">
+            <img src="images/img/info.png">
+         
+        </div>
+      </div>
+      <div class="bubble">
+          <img src="images/img/bubble.png">
+          <img src="images/img/bubble.png">
+          <img src="images/img/bubble.png">
+          <img src="images/img/bubble.png">
+          <img src="images/img/bubble.png">
+          <img src="images/img/bubble.png">
+          <img src="images/img/bubble.png">
       </div>
     </div>
   </body>
